--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: node_js
 node_js:
   - '0.8'
   - '0.10'
+before_install:
+  - currentfolder=${PWD##*/}
+  - if [ "$currentfolder" != 'generator-angular-app' ]; then cd .. && eval "mv $currentfolder generator-angular-app" && cd generator-angular-app; fi
+
