--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "generator-angular-module",
-  "version": "0.2.0",
-  "description": "A generator for Yeoman",
+  "name": "generator-angular-bootstrap",
+  "version": "0.2.3",
+  "description": "A generator for AngularJS applications",
   "keywords": [
+    "angular",
     "yeoman-generator"
   ],
-  "homepage": "https://github.com/mgcrea/generator-angular-module",
-  "bugs": "https://github.com/mgcrea/generator-angular-module/issues",
+  "homepage": "https://github.com/mgcrea/generator-angular-bootstrap",
+  "bugs": "https://github.com/mgcrea/generator-angular-bootstrap/issues",
   "author": {
     "name": "Olivier Louvignes",
     "email": "olivier@mg-crea.com",
@@ -15,21 +16,26 @@
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/mgcrea/generator-angular-module.git"
+    "url": "git://github.com/mgcrea/generator-angular-bootstrap.git"
   },
   "scripts": {
     "test": "mocha"
   },
   "dependencies": {
-    "github": "~0.1.10",
-    "lodash": "~1.3.1",
-    "yeoman-generator": "~0.12.2"
+    "yeoman-generator": "~0.14.0",
+    "bluebird": "~1.0.2",
+    "github": "~0.1.13"
   },
   "devDependencies": {
-    "mocha": "~1.10.0"
+    "mocha": "~1.14.0",
+    "semver": "~2.2.1"
+  },
+  "peerDependencies": {
+    "yo": ">=1.0.0"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.8.0",
+    "npm": ">=1.2.10"
   },
   "licenses": [
     {
