chore(npm): add semver as a dep (fixes #1)

--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   "dependencies": {
     "yeoman-generator": "~0.14.0",
     "bluebird": "~1.0.2",
-    "github": "~0.1.13"
+    "github": "~0.1.13",
+    "semver": "~2.2.1"
   },
   "devDependencies": {
-    "mocha": "~1.14.0",
-    "semver": "~2.2.1"
+    "mocha": "~1.14.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
