--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-angular-bootstrap",
-  "version": "0.2.6",
+  "version": "0.4.1",
   "description": "A generator for AngularJS applications",
   "keywords": [
     "angular",
@@ -22,13 +22,13 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.16.0",
-    "bluebird": "~1.0.7",
-    "github": "~0.1.14",
-    "semver": "~2.2.1"
+    "bluebird": "^1.2.4",
+    "needle": "^0.7.1",
+    "semver": "^2.3.0",
+    "yeoman-generator": "^0.16.0"
   },
   "devDependencies": {
-    "mocha": "~1.17.1"
+    "mocha": "^1.18.2"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
