--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "test": "mocha"
   },
   "dependencies": {
-    "bluebird": "^2.1.3",
-    "needle": "^0.7.2",
-    "semver": "^2.3.1",
-    "yeoman-generator": "^0.17.0"
+    "bluebird": "^2.3.0",
+    "chalk": "^0.5.1",
+    "needle": "^0.7.8",
+    "semver": "^3.0.1",
+    "yeoman-generator": "^0.17.2"
   },
   "devDependencies": {
-    "mocha": "^1.20.1"
+    "chalk": "^0.5.1",
+    "mocha": "^1.21.4"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
